--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ license = BSD 3-Clause License
 url = https://github.com/Mergifyio/graphql-utils
 classifiers =
     Intended Audience :: Developers
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
