fix(multi_query): changing function to asynchronous

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,13 @@
 [tox]
 skipsdist = true
 
+test =
+    pytest
+    pytest-asyncio
+
 [testenv]
 usedevelop = True
-deps = pytest
+deps = .[test]
 commands = pytest {posargs}
 
 [testenv:pep8]
